FTB-Community/force-app/main/default/objects/FTB_Team__c/FTB_Team__c.object-meta.xml
<CustomObject>
    <description>FTB Object to register teams that will partecipate to championships</description>
    <label>Team</label>
    <nameField>
        <label>Team Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Teams</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>