FTB-Community/force-app/main/default/objects/FTB_Team__c/fields/FTB_Championship__c.field-meta.xml
<CustomField>
    <fullName>FTB_Championship__c</fullName>
    <label>Championship</label>
    <referenceTo>FTB_Championship__c</referenceTo>
    <relationshipLabel>Teams</relationshipLabel>
    <relationshipName>FTB_Teams</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>