FTB-Community/force-app/main/default/objects/FTB_Team__c/fields/FTB_Loss__c.field-meta.xml
<CustomField>
    <fullName>FTB_Loss__c</fullName>
    <label>Loss</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>