FTB-Community/force-app/main/default/objects/FTB_Team__c/fields/FTB_Record__c.field-meta.xml
<CustomField>
    <fullName>FTB_Record__c</fullName>
    <formula>TEXT(FTB_Win__c) &amp; &quot;-&quot; &amp;  TEXT(FTB_Loss__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record</label>
    <type>Text</type>
</CustomField>