FTB-Community/force-app/main/default/objects/FTB_Team__c/fields/FTB_ShortName__c.field-meta.xml
<CustomField>
    <fullName>FTB_ShortName__c</fullName>
    <label>Short Name</label>
    <length>3</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>