FTB-Community/force-app/main/default/objects/FTB_Team__c/fields/FTB_User__c.field-meta.xml
<CustomField>
    <fullName>FTB_User__c</fullName>
    <label>User</label>
    <referenceTo>FTB_User__c</referenceTo>
    <relationshipLabel>Teams</relationshipLabel>
    <relationshipName>FTB_Teams</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>