FTB-Community/force-app/main/default/objects/FTB_Team__c/fields/FTB_WinLoss__c.field-meta.xml
<CustomField>
    <fullName>FTB_WinLoss__c</fullName>
    <label>Win-Loss</label>
    <length>50</length>
    <type>Text</type>
</CustomField>