FTB-Community/force-app/main/default/objects/FTB_Team__c/fields/FTB_Winner__c.field-meta.xml
<CustomField>
    <fullName>FTB_Winner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Winner</label>
    <type>Checkbox</type>
</CustomField>