FTB-Community/force-app/main/default/objects/FTB_Team__c/listViews/FTB_LV_Trades.listView-meta.xml
<ListView>
    <fullName>FTB_LV_Trades</fullName>
    <columns>NAME</columns>
    <columns>FTB_ShortName__c</columns>
    <columns>FTB_User__c</columns>
    <columns>FTB_Championship__c</columns>
    <columns>FTB_WinLoss__c</columns>
    <columns>Ranking__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Trades</label>
</ListView>